--- a/15.05.1-HG255D/config/hg255d-mywrt-full.config
+++ b/15.05.1-HG255D/config/hg255d-mywrt-full.config
@@ -39,20 +39,62 @@ CONFIG_TARGET_ramips=y
 # CONFIG_TARGET_omap is not set
 # CONFIG_TARGET_uml is not set
 # CONFIG_TARGET_x86 is not set
-# CONFIG_TARGET_ramips_rt305x is not set
-CONFIG_TARGET_ramips_mt7620=y
+CONFIG_TARGET_ramips_rt305x=y
+# CONFIG_TARGET_ramips_mt7620 is not set
 # CONFIG_TARGET_ramips_mt7621 is not set
 # CONFIG_TARGET_ramips_mt7628 is not set
 # CONFIG_TARGET_ramips_mt7688 is not set
 # CONFIG_TARGET_ramips_rt3883 is not set
 # CONFIG_TARGET_ramips_rt288x is not set
-CONFIG_TARGET_ramips_mt7620_Default=y
-# CONFIG_TARGET_ramips_mt7620_AIBR100 is not set
-# CONFIG_TARGET_ramips_mt7620_E1700 is not set
-# CONFIG_TARGET_ramips_mt7620_MT7620a is not set
-# CONFIG_TARGET_ramips_mt7620_MicroWRT is not set
-# CONFIG_TARGET_ramips_mt7620_EX2700 is not set
-# CONFIG_TARGET_ramips_mt7620_XIAOMI-MIWIFI-MINI is not set
+# CONFIG_TARGET_ramips_rt305x_Default is not set
+# CONFIG_TARGET_ramips_rt305x_ALL02393G is not set
+# CONFIG_TARGET_ramips_rt305x_ALL0256N is not set
+# CONFIG_TARGET_ramips_rt305x_ALL5002 is not set
+# CONFIG_TARGET_ramips_rt305x_ALL5003 is not set
+# CONFIG_TARGET_ramips_rt305x_ASL26555 is not set
+# CONFIG_TARGET_ramips_rt305x_AWM002EVB is not set
+# CONFIG_TARGET_ramips_rt305x_AWM003EVB is not set
+# CONFIG_TARGET_ramips_rt305x_AWAPN2403 is not set
+# CONFIG_TARGET_ramips_rt305x_RT-N10-PLUS is not set
+# CONFIG_TARGET_ramips_rt305x_RT-N13U is not set
+# CONFIG_TARGET_ramips_rt305x_MR102N is not set
+# CONFIG_TARGET_ramips_rt305x_HW550-3G is not set
+# CONFIG_TARGET_ramips_rt305x_F5D8235V2 is not set
+# CONFIG_TARGET_ramips_rt305x_F7C027 is not set
+# CONFIG_TARGET_ramips_rt305x_BROADWAY is not set
+# CONFIG_TARGET_ramips_rt305x_DIR615H1 is not set
+# CONFIG_TARGET_ramips_rt305x_DIR-615-D is not set
+# CONFIG_TARGET_ramips_rt305x_DCS930 is not set
+# CONFIG_TARGET_ramips_rt305x_DCS930LB1 is not set
+# CONFIG_TARGET_ramips_rt305x_DIR610A1 is not set
+# CONFIG_TARGET_ramips_rt305x_WIZARD8800 is not set
+# CONFIG_TARGET_ramips_rt305x_ESR9753 is not set
+# CONFIG_TARGET_ramips_rt305x_FONERA20N is not set
+# CONFIG_TARGET_ramips_rt305x_FREESTATION5 is not set
+# CONFIG_TARGET_ramips_rt305x_MPRA1 is not set
+# CONFIG_TARGET_ramips_rt305x_MPRA2 is not set
+CONFIG_TARGET_ramips_rt305x_HG255D=y
+# CONFIG_TARGET_ramips_rt305x_HLKRM04 is not set
+# CONFIG_TARGET_ramips_rt305x_HT-TM02 is not set
+# CONFIG_TARGET_ramips_rt305x_M2M is not set
+# CONFIG_TARGET_ramips_rt305x_A5-V11 is not set
+# CONFIG_TARGET_ramips_rt305x_WT1520 is not set
+# CONFIG_TARGET_ramips_rt305x_OLINUXINO-RT5350F-EVB is not set
+# CONFIG_TARGET_ramips_rt305x_OLINUXINO-RT5350F is not set
+# CONFIG_TARGET_ramips_rt305x_IP2202 is not set
+# CONFIG_TARGET_ramips_rt305x_M3 is not set
+# CONFIG_TARGET_ramips_rt305x_M4 is not set
+# CONFIG_TARGET_ramips_rt305x_X5 is not set
+# CONFIG_TARGET_ramips_rt305x_X8 is not set
+# CONFIG_TARGET_ramips_rt305x_PX4885 is not set
+# CONFIG_TARGET_ramips_rt305x_3G150B is not set
+# CONFIG_TARGET_ramips_rt305x_3G300M is not set
+# CONFIG_TARGET_ramips_rt305x_W306R_V20 is not set
+# CONFIG_TARGET_ramips_rt305x_UR-336UN is not set
+# CONFIG_TARGET_ramips_rt305x_UR-326N4G is not set
+# CONFIG_TARGET_ramips_rt305x_VOCORE is not set
+# CONFIG_TARGET_ramips_rt305x_NCS601W is not set
+# CONFIG_TARGET_ramips_rt305x_WIZFI630A is not set
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="ramips"
 CONFIG_TARGET_ARCH_PACKAGES="ramips_24kec"
@@ -70,14 +112,12 @@ CONFIG_DEFAULT_iptables=y
 CONFIG_DEFAULT_iwinfo=y
 CONFIG_DEFAULT_kmod-gpio-button-hotplug=y
 CONFIG_DEFAULT_kmod-leds-gpio=y
-CONFIG_DEFAULT_kmod-ledtrig-usbdev=y
-CONFIG_DEFAULT_kmod-mt7620=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
-CONFIG_DEFAULT_kmod-usb-core=y
-CONFIG_DEFAULT_kmod-usb-ohci=y
-CONFIG_DEFAULT_kmod-usb2=y
+CONFIG_DEFAULT_kmod-rt2800-soc=y
+CONFIG_DEFAULT_kmod-usb-dwc2=y
 CONFIG_DEFAULT_libc=y
 CONFIG_DEFAULT_libgcc=y
+CONFIG_DEFAULT_logd=y
 CONFIG_DEFAULT_mtd=y
 CONFIG_DEFAULT_netifd=y
 CONFIG_DEFAULT_odhcp6c=y
@@ -90,9 +130,9 @@ CONFIG_DEFAULT_uci=y
 CONFIG_DEFAULT_wpad-mini=y
 CONFIG_AUDIO_SUPPORT=y
 CONFIG_GPIO_SUPPORT=y
-CONFIG_PCI_SUPPORT=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USES_DEVICETREE=y
+CONFIG_USES_INITRAMFS=y
 CONFIG_USES_SQUASHFS=y
 CONFIG_mipsel=y
 CONFIG_ARCH="mipsel"
@@ -269,7 +309,7 @@ CONFIG_PER_FEED_REPO=y
 CONFIG_PER_FEED_REPO_ADD_DISABLED=y
 CONFIG_PER_FEED_REPO_ADD_COMMENTED=y
 CONFIG_FEED_packages=y
-# CONFIG_FEED_luci is not set
+CONFIG_FEED_luci=y
 # CONFIG_FEED_routing is not set
 # CONFIG_FEED_telephony is not set
 # CONFIG_FEED_management is not set
@@ -1215,6 +1255,7 @@ CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_librt=m
 CONFIG_PACKAGE_libstdcpp=m
 # CONFIG_PACKAGE_libthread-db is not set
+CONFIG_PACKAGE_logd=y
 CONFIG_PACKAGE_mtd=y
 CONFIG_PACKAGE_netifd=y
 # CONFIG_PACKAGE_om-watchdog is not set
@@ -1301,24 +1342,8 @@ CONFIG_PACKAGE_rt2800-usb-firmware=m
 # Block Devices
 #
 CONFIG_PACKAGE_kmod-aoe=m
-CONFIG_PACKAGE_kmod-ata-core=m
-CONFIG_PACKAGE_kmod-ata-ahci=m
-CONFIG_PACKAGE_kmod-ata-artop=m
-CONFIG_PACKAGE_kmod-ata-marvell-sata=m
-CONFIG_PACKAGE_kmod-ata-nvidia-sata=m
-CONFIG_PACKAGE_kmod-ata-pdc202xx-old=m
-CONFIG_PACKAGE_kmod-ata-piix=m
-CONFIG_PACKAGE_kmod-ata-sil=m
-CONFIG_PACKAGE_kmod-ata-sil24=m
-CONFIG_PACKAGE_kmod-ata-via-sata=m
 CONFIG_PACKAGE_kmod-block2mtd=m
 CONFIG_PACKAGE_kmod-dm=m
-CONFIG_PACKAGE_kmod-ide-core=m
-CONFIG_PACKAGE_kmod-ide-aec62xx=m
-CONFIG_PACKAGE_kmod-ide-generic=m
-CONFIG_PACKAGE_kmod-ide-generic-old=m
-CONFIG_PACKAGE_kmod-ide-it821x=m
-CONFIG_PACKAGE_kmod-ide-pdc202xx=m
 CONFIG_PACKAGE_kmod-loop=m
 CONFIG_PACKAGE_kmod-md-mod=m
 CONFIG_PACKAGE_kmod-md-linear=m
@@ -1338,7 +1363,6 @@ CONFIG_PACKAGE_kmod-scsi-generic=m
 CONFIG_PACKAGE_kmod-can=m
 CONFIG_PACKAGE_kmod-can-bcm=m
 CONFIG_PACKAGE_kmod-can-c-can=m
-CONFIG_PACKAGE_kmod-can-c-can-pci=m
 CONFIG_PACKAGE_kmod-can-c-can-platform=m
 CONFIG_PACKAGE_kmod-can-gw=m
 CONFIG_PACKAGE_kmod-can-raw=m
@@ -1383,8 +1407,6 @@ CONFIG_PACKAGE_kmod-crypto-michael-mic=m
 CONFIG_PACKAGE_kmod-crypto-misc=m
 CONFIG_PACKAGE_kmod-crypto-null=m
 CONFIG_PACKAGE_kmod-crypto-ocf=m
-CONFIG_PACKAGE_kmod-crypto-ocf-hifn7751=m
-CONFIG_PACKAGE_kmod-crypto-ocf-hifnhipp=m
 CONFIG_PACKAGE_kmod-crypto-pcbc=m
 CONFIG_PACKAGE_kmod-crypto-pcompress=m
 CONFIG_PACKAGE_kmod-crypto-rng=m
@@ -1428,7 +1450,6 @@ CONFIG_PACKAGE_kmod-fuse=m
 #
 # FireWire support
 #
-# CONFIG_PACKAGE_kmod-firewire is not set
 
 #
 # Hardware Monitoring Support
@@ -1609,40 +1630,16 @@ CONFIG_PACKAGE_kmod-nft-nat6=m
 #
 # Network Devices
 #
-# CONFIG_PACKAGE_kmod-3c59x is not set
-# CONFIG_PACKAGE_kmod-8139cp is not set
-# CONFIG_PACKAGE_kmod-8139too is not set
-# CONFIG_PACKAGE_kmod-atl1 is not set
-# CONFIG_PACKAGE_kmod-atl1c is not set
-# CONFIG_PACKAGE_kmod-atl1e is not set
-# CONFIG_PACKAGE_kmod-atl2 is not set
-# CONFIG_PACKAGE_kmod-b44 is not set
-# CONFIG_PACKAGE_kmod-dm9000 is not set
 # CONFIG_PACKAGE_kmod-dummy is not set
-# CONFIG_PACKAGE_kmod-e100 is not set
-# CONFIG_PACKAGE_kmod-e1000 is not set
-# CONFIG_PACKAGE_kmod-et131x is not set
-# CONFIG_PACKAGE_kmod-forcedeth is not set
 # CONFIG_PACKAGE_kmod-gigaset is not set
 # CONFIG_PACKAGE_kmod-hfcmulti is not set
 # CONFIG_PACKAGE_kmod-hfcpci is not set
 # CONFIG_PACKAGE_kmod-ifb is not set
-# CONFIG_PACKAGE_kmod-igb is not set
 CONFIG_PACKAGE_kmod-libphy=m
 # CONFIG_PACKAGE_kmod-macvlan is not set
 CONFIG_PACKAGE_kmod-mii=m
-# CONFIG_PACKAGE_kmod-natsemi is not set
-# CONFIG_PACKAGE_kmod-ne2k-pci is not set
 # CONFIG_PACKAGE_kmod-of-mdio is not set
-# CONFIG_PACKAGE_kmod-pcnet32 is not set
 # CONFIG_PACKAGE_kmod-phy-broadcom is not set
-# CONFIG_PACKAGE_kmod-r6040 is not set
-# CONFIG_PACKAGE_kmod-r8169 is not set
-# CONFIG_PACKAGE_kmod-sis190 is not set
-# CONFIG_PACKAGE_kmod-sis900 is not set
-# CONFIG_PACKAGE_kmod-skge is not set
-# CONFIG_PACKAGE_kmod-sky2 is not set
-# CONFIG_PACKAGE_kmod-solos-pci is not set
 # CONFIG_PACKAGE_kmod-spi-ks8995 is not set
 # CONFIG_PACKAGE_kmod-swconfig is not set
 # CONFIG_PACKAGE_kmod-switch-ip17xx is not set
@@ -1650,10 +1647,6 @@ CONFIG_PACKAGE_kmod-mii=m
 # CONFIG_PACKAGE_kmod-switch-rtl8366rb is not set
 # CONFIG_PACKAGE_kmod-switch-rtl8366s is not set
 # CONFIG_PACKAGE_kmod-tg3 is not set
-# CONFIG_PACKAGE_kmod-tulip is not set
-# CONFIG_PACKAGE_kmod-via-rhine is not set
-# CONFIG_PACKAGE_kmod-via-velocity is not set
-# CONFIG_PACKAGE_kmod-vmxnet3 is not set
 
 #
 # Network Support
@@ -1717,7 +1710,6 @@ CONFIG_PACKAGE_kmod-udptunnel6=m
 # Other modules
 #
 CONFIG_PACKAGE_kmod-6lowpan=m
-# CONFIG_PACKAGE_kmod-bcma is not set
 CONFIG_PACKAGE_kmod-bluetooth=m
 CONFIG_PACKAGE_kmod-bluetooth_6lowpan=m
 CONFIG_PACKAGE_kmod-button-hotplug=m
@@ -1752,10 +1744,8 @@ CONFIG_PACKAGE_kmod-random-core=m
 CONFIG_PACKAGE_kmod-regmap=m
 # CONFIG_PACKAGE_kmod-rotary-gpio-custom is not set
 CONFIG_PACKAGE_kmod-sdhci=m
-CONFIG_PACKAGE_kmod-sdhci-mt7620=m
 CONFIG_PACKAGE_kmod-serial-8250=m
 CONFIG_PACKAGE_kmod-softdog=m
-# CONFIG_PACKAGE_kmod-ssb is not set
 CONFIG_PACKAGE_kmod-zram=m
 
 #
@@ -1778,7 +1768,6 @@ CONFIG_PACKAGE_kmod-spi-gpio-old=m
 CONFIG_PACKAGE_kmod-sound-core=m
 CONFIG_PACKAGE_kmod-ac97=m
 # CONFIG_PACKAGE_kmod-sound-i8x0 is not set
-CONFIG_PACKAGE_kmod-sound-mtk=m
 # CONFIG_PACKAGE_kmod-sound-seq is not set
 CONFIG_PACKAGE_kmod-sound-soc-ac97=m
 CONFIG_PACKAGE_kmod-sound-soc-core=m
@@ -1817,7 +1806,6 @@ CONFIG_PACKAGE_kmod-usb-net-rtl8152=m
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=m
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=m
 CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-ohci-pci=m
 CONFIG_PACKAGE_kmod-usb-printer=m
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-ark3116=m
@@ -1846,7 +1834,6 @@ CONFIG_PACKAGE_kmod-usb-uhci=m
 CONFIG_PACKAGE_kmod-usb-wdm=m
 # CONFIG_PACKAGE_kmod-usb-yealink is not set
 CONFIG_PACKAGE_kmod-usb2=y
-# CONFIG_PACKAGE_kmod-usb2-pci is not set
 CONFIG_PACKAGE_kmod-usb3=m
 # CONFIG_PACKAGE_kmod-usbip is not set
 # CONFIG_PACKAGE_kmod-usbip-client is not set
@@ -1915,76 +1902,40 @@ CONFIG_PACKAGE_kmod-video-videobuf2=m
 # CONFIG_PACKAGE_ath10k-firmware-qca6174 is not set
 # CONFIG_PACKAGE_ath10k-firmware-qca988x is not set
 # CONFIG_PACKAGE_ath10k-firmware-qca99x0 is not set
-# CONFIG_PACKAGE_kmod-acx-mac80211 is not set
-# CONFIG_PACKAGE_kmod-adm8211 is not set
 # CONFIG_PACKAGE_kmod-ath is not set
-# CONFIG_PACKAGE_kmod-ath10k is not set
-# CONFIG_PACKAGE_kmod-ath5k is not set
-# CONFIG_PACKAGE_kmod-ath9k is not set
 # CONFIG_PACKAGE_kmod-ath9k-common is not set
 # CONFIG_PACKAGE_kmod-ath9k-htc is not set
-# CONFIG_PACKAGE_kmod-b43 is not set
-# CONFIG_PACKAGE_kmod-b43legacy is not set
 # CONFIG_PACKAGE_kmod-brcmfmac is not set
-# CONFIG_PACKAGE_kmod-brcmsmac is not set
 # CONFIG_PACKAGE_kmod-brcmutil is not set
 # CONFIG_PACKAGE_kmod-carl9170 is not set
 CONFIG_PACKAGE_kmod-cfg80211=y
-# CONFIG_PACKAGE_kmod-hermes is not set
-# CONFIG_PACKAGE_kmod-hermes-pci is not set
-# CONFIG_PACKAGE_kmod-hermes-plx is not set
-# CONFIG_PACKAGE_kmod-hostap is not set
-# CONFIG_PACKAGE_kmod-hostap-pci is not set
-# CONFIG_PACKAGE_kmod-hostap-plx is not set
-# CONFIG_PACKAGE_kmod-ipw2100 is not set
-# CONFIG_PACKAGE_kmod-ipw2200 is not set
-# CONFIG_PACKAGE_kmod-iwl-legacy is not set
-# CONFIG_PACKAGE_kmod-iwl3945 is not set
-# CONFIG_PACKAGE_kmod-iwl4965 is not set
-# CONFIG_PACKAGE_kmod-iwlwifi is not set
 # CONFIG_PACKAGE_kmod-lib80211 is not set
 # CONFIG_PACKAGE_kmod-libertas-sdio is not set
 # CONFIG_PACKAGE_kmod-libertas-spi is not set
 # CONFIG_PACKAGE_kmod-libertas-usb is not set
-# CONFIG_PACKAGE_kmod-libipw is not set
 CONFIG_PACKAGE_kmod-mac80211=m
 CONFIG_PACKAGE_MAC80211_DEBUGFS=y
 # CONFIG_PACKAGE_MAC80211_TRACING is not set
 CONFIG_PACKAGE_MAC80211_MESH=y
 # CONFIG_PACKAGE_kmod-mac80211-hwsim is not set
-CONFIG_PACKAGE_kmod-mt76=m
 # CONFIG_PACKAGE_kmod-mt7601u is not set
-# CONFIG_PACKAGE_kmod-mwifiex-pcie is not set
-# CONFIG_PACKAGE_kmod-mwl8k is not set
-# CONFIG_PACKAGE_kmod-net-airo is not set
-# CONFIG_PACKAGE_kmod-net-prism54 is not set
 # CONFIG_PACKAGE_kmod-net-rtl8188eu is not set
 # CONFIG_PACKAGE_kmod-net-rtl8192su is not set
 # CONFIG_PACKAGE_kmod-p54-common is not set
-# CONFIG_PACKAGE_kmod-p54-pci is not set
 # CONFIG_PACKAGE_kmod-p54-usb is not set
-# CONFIG_PACKAGE_kmod-rt2400-pci is not set
-# CONFIG_PACKAGE_kmod-rt2500-pci is not set
 # CONFIG_PACKAGE_kmod-rt2500-usb is not set
 CONFIG_PACKAGE_kmod-rt2800-lib=m
 CONFIG_PACKAGE_kmod-rt2800-mmio=m
-CONFIG_PACKAGE_kmod-rt2800-pci=m
 CONFIG_PACKAGE_kmod-rt2800-soc=m
 CONFIG_PACKAGE_kmod-rt2800-usb=m
 CONFIG_PACKAGE_kmod-rt2x00-lib=m
 # CONFIG_PACKAGE_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_PACKAGE_RT2X00_DEBUG is not set
 CONFIG_PACKAGE_kmod-rt2x00-mmio=m
-CONFIG_PACKAGE_kmod-rt2x00-pci=m
 CONFIG_PACKAGE_kmod-rt2x00-usb=m
-# CONFIG_PACKAGE_kmod-rt61-pci is not set
 # CONFIG_PACKAGE_kmod-rt73-usb is not set
-# CONFIG_PACKAGE_kmod-rtl8180 is not set
 # CONFIG_PACKAGE_kmod-rtl8187 is not set
-# CONFIG_PACKAGE_kmod-rtl8192ce is not set
 # CONFIG_PACKAGE_kmod-rtl8192cu is not set
-# CONFIG_PACKAGE_kmod-rtl8192de is not set
-# CONFIG_PACKAGE_kmod-rtl8192se is not set
 # CONFIG_PACKAGE_kmod-rtl8xxxu is not set
 # CONFIG_PACKAGE_kmod-zd1211rw is not set
 CONFIG_PACKAGE_kmod-dma-buf=m
@@ -2133,31 +2084,31 @@ CONFIG_PACKAGE_luci-base=y
 #
 # Translations
 #
-# CONFIG_LUCI_LANG_hu is not set
-# CONFIG_LUCI_LANG_pt is not set
-# CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_ro is not set
-CONFIG_LUCI_LANG_en=y
-# CONFIG_LUCI_LANG_el is not set
-# CONFIG_LUCI_LANG_uk is not set
-# CONFIG_LUCI_LANG_ja is not set
-# CONFIG_LUCI_LANG_vi is not set
-# CONFIG_LUCI_LANG_de is not set
-# CONFIG_LUCI_LANG_no is not set
-# CONFIG_LUCI_LANG_ms is not set
-# CONFIG_LUCI_LANG_pl is not set
-CONFIG_LUCI_LANG_zh-cn=y
-# CONFIG_LUCI_LANG_he is not set
-# CONFIG_LUCI_LANG_zh-tw is not set
-# CONFIG_LUCI_LANG_tr is not set
-# CONFIG_LUCI_LANG_sv is not set
-# CONFIG_LUCI_LANG_ru is not set
-# CONFIG_LUCI_LANG_pt-br is not set
 # CONFIG_LUCI_LANG_ca is not set
-# CONFIG_LUCI_LANG_es is not set
 # CONFIG_LUCI_LANG_cs is not set
+# CONFIG_LUCI_LANG_de is not set
+# CONFIG_LUCI_LANG_el is not set
+CONFIG_LUCI_LANG_en=y
+# CONFIG_LUCI_LANG_es is not set
 # CONFIG_LUCI_LANG_fr is not set
+# CONFIG_LUCI_LANG_he is not set
+# CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_it is not set
+# CONFIG_LUCI_LANG_ja is not set
+# CONFIG_LUCI_LANG_ms is not set
+# CONFIG_LUCI_LANG_no is not set
+# CONFIG_LUCI_LANG_pl is not set
+# CONFIG_LUCI_LANG_pt is not set
+# CONFIG_LUCI_LANG_pt-br is not set
+# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_ru is not set
+# CONFIG_LUCI_LANG_sk is not set
+# CONFIG_LUCI_LANG_sv is not set
+# CONFIG_LUCI_LANG_tr is not set
+# CONFIG_LUCI_LANG_uk is not set
+# CONFIG_LUCI_LANG_vi is not set
+CONFIG_LUCI_LANG_zh-cn=y
+# CONFIG_LUCI_LANG_zh-tw is not set
 CONFIG_PACKAGE_luci-mod-admin-full=y
 
 #
@@ -2257,114 +2208,6 @@ CONFIG_PACKAGE_luci-i18n-firewall-en=y
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
-
-#
-# MTK Properties
-#
-
-#
-# Applications
-#
-CONFIG_PACKAGE_uci2dat=y
-
-#
-# Drivers
-#
-CONFIG_PACKAGE_kmod-mt7620=y
-CONFIG_FIRST_IF_RT2860=y
-CONFIG_RALINK_MT7620=y
-CONFIG_RT_FIRST_CARD=2860
-CONFIG_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_RT2860V2_AP=y
-CONFIG_RT2860V2_AP_V24_DATA_STRUCTURE=y
-# CONFIG_RT2860V2_AP_LED is not set
-CONFIG_RT2860V2_AP_WSC=y
-CONFIG_RT2860V2_AP_WSC_V2=y
-# CONFIG_RT2860V2_AP_LLTD is not set
-# CONFIG_RT2860V2_AP_WDS is not set
-CONFIG_RT2860V2_AP_MBSS=y
-CONFIG_NEW_MBSSID_MODE=y
-CONFIG_RT2860V2_AP_APCLI=y
-CONFIG_RT2860V2_AP_MAC_REPEATER=y
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-# CONFIG_RT2860V2_AP_CARRIER is not set
-# CONFIG_RT2860V2_AP_DLS is not set
-# CONFIG_RT2860V2_AP_IDS is not set
-CONFIG_RT2860V2_AP_COC=y
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-CONFIG_RT2860V2_AP_80211N_DRAFT3=y
-# CONFIG_RT2860V2_ADJ_PWR_CONSUMPTION_SUPPORT is not set
-# CONFIG_RT2860V2_SINGLE_SKU is not set
-# CONFIG_INTERNAL_PA_INTERNAL_LNA is not set
-CONFIG_INTERNAL_PA_EXTERNAL_LNA=y
-# CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
-# CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC is not set
-# CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-CONFIG_PACKAGE_kmod-mt76x2e=y
-CONFIG_MT76X2E_RT_SECOND_CARD=7612
-CONFIG_MT76X2E_WIFI_MODE_AP=y
-CONFIG_MT76X2E_RT_FIRST_IF_RF_OFFSET=262144
-CONFIG_MT76X2E_RT_SECOND_IF_RF_OFFSET=294912
-CONFIG_MT76X2E_RALINK_MT7612E=y
-
-#
-# AP Features
-#
-CONFIG_MT76X2E_RLT_AP_SUPPORT=y
-# CONFIG_MT76X2E_WDS_SUPPORT is not set
-# CONFIG_MT76X2E_SNIFFER_SUPPORT is not set
-# CONFIG_MT76X2E_CFG80211_SUPPORT is not set
-CONFIG_MT76X2E_MBSS_SUPPORT=y
-CONFIG_MT76X2E_NEW_MBSSID_MODE=y
-CONFIG_MT76X2E_ENHANCE_NEW_MBSSID_MODE=y
-CONFIG_MT76X2E_APCLI_SUPPORT=y
-CONFIG_MT76X2E_APCLI_CERT_SUPPORT=y
-# CONFIG_MT76X2E_DFS_SUPPORT is not set
-# CONFIG_MT76X2E_COC_SUPPORT is not set
-# CONFIG_MT76X2E_DELAYED_TCP_ACK_SUPPORT is not set
-# CONFIG_MT76X2E_RT2860V2_SNMP is not set
-# CONFIG_MT76X2E_MCAST_RATE_SPECIFIC is not set
-# CONFIG_MT76X2E_RT2860V2_AP_EXT_BUILD_CHANNEL_LIST is not set
-# CONFIG_MT76X2E_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE is not set
-# CONFIG_MT76X2E_DISABLE_EDCCA is not set
-
-#
-# WiFi Features
-#
-CONFIG_MT76X2E_FIRST_IF_EEPROM_FLASH=y
-CONFIG_MT76X2E_SECOND_IF_EEPROM_FLASH=y
-CONFIG_MT76X2E_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MT76X2E_RT_SECOND_CARD_EEPROM="flash"
-CONFIG_MT76X2E_WIFI_BASIC_FUNC=y
-CONFIG_MT76X2E_WSC_INCLUDED=y
-CONFIG_MT76X2E_WSC_V2_SUPPORT=y
-# CONFIG_MT76X2E_WSC_NFC_SUPPORT is not set
-CONFIG_MT76X2E_DOT11N_DRAFT3=y
-CONFIG_MT76X2E_DOT11_VHT_AC=y
-# CONFIG_MT76X2E_DOT11W_PMF_SUPPORT is not set
-# CONFIG_MT76X2E_TXBF_SUPPORT is not set
-CONFIG_MT76X2E_LLTD_SUPPORT=y
-# CONFIG_MT76X2E_QOS_DLS_SUPPORT is not set
-# CONFIG_MT76X2E_CARRIER_DETECTION_SUPPORT is not set
-# CONFIG_MT76X2E_IGMP_SNOOP_SUPPORT is not set
-# CONFIG_MT76X2E_BLOCK_NET_IF is not set
-CONFIG_MT76X2E_RATE_ADAPTION=y
-CONFIG_MT76X2E_NEW_RATE_ADAPT_SUPPORT=y
-# CONFIG_MT76X2E_AGS_SUPPORT is not set
-# CONFIG_MT76X2E_IDS_SUPPORT is not set
-# CONFIG_MT76X2E_WIFI_WORK_QUEUE is not set
-CONFIG_MT76X2E_WIFI_SKB_RECYCLE=y
-CONFIG_MT76X2E_RTMP_FLASH_SUPPORT=y
-CONFIG_MT76X2E_LED_CONTROL_SUPPORT=y
-CONFIG_MT76X2E_ATE_SUPPORT=y
-# CONFIG_MT76X2E_MEMORY_OPTIMIZATION is not set
-CONFIG_MT76X2E_DEBUG_LEVEL=1
-# CONFIG_MT76X2E_RTMP_TEMPERATURE_CALIBRATION is not set
-# CONFIG_MT76X2E_HOTSPOT is not set
-# CONFIG_MT76X2E_SINGLE_SKU_V2 is not set
-CONFIG_MT76X2E_RLT_MAC=y
-# CONFIG_MT76X2E_RTMP_THERMAL_PROTECT is not set
 
 #
 # Network
@@ -2610,7 +2453,6 @@ CONFIG_PACKAGE_samba36-server=m
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_shadowsocks-libev=m
 CONFIG_PACKAGE_shadowsocks-tools=m
-# CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_tcpdump is not set
 # CONFIG_PACKAGE_tcpdump-mini is not set
 # CONFIG_PACKAGE_uclient-fetch is not set
