--- a/15.05.1/config/h618b-mywrt-aprs.config
+++ b/15.05.1/config/h618b-mywrt-aprs.config
@@ -2110,7 +2110,7 @@ CONFIG_PACKAGE_libjson-c=y
 CONFIG_PACKAGE_libltdl=m
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblzo=m
-CONFIG_PACKAGE_libmnl=m
+CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_libmount=m
 CONFIG_PACKAGE_libncurses=m
 CONFIG_PACKAGE_libncursesw=m
@@ -2254,7 +2254,7 @@ CONFIG_PACKAGE_iptables=y
 #
 # CONFIG_PACKAGE_genl is not set
 # CONFIG_PACKAGE_igmpproxy is not set
-CONFIG_PACKAGE_ip=m
+CONFIG_PACKAGE_ip=y
 # CONFIG_PACKAGE_ip-bridge is not set
 # CONFIG_PACKAGE_ip-full is not set
 # CONFIG_PACKAGE_lldpd is not set
@@ -2369,9 +2369,9 @@ CONFIG_PACKAGE_iperf=m
 CONFIG_PACKAGE_iperf-mt=m
 CONFIG_PACKAGE_iperf3=m
 CONFIG_PACKAGE_ipip=m
-CONFIG_PACKAGE_ipset=m
+CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipset-dns=m
-CONFIG_PACKAGE_ipset-lists=m
+CONFIG_PACKAGE_ipset-lists=y
 # CONFIG_PACKAGE_iputils-arping is not set
 # CONFIG_PACKAGE_iputils-clockdiff is not set
 # CONFIG_PACKAGE_iputils-ping is not set
@@ -2383,7 +2383,7 @@ CONFIG_PACKAGE_ipset-lists=m
 CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_map is not set
 # CONFIG_PACKAGE_mdns is not set
-CONFIG_PACKAGE_minivtun=m
+CONFIG_PACKAGE_minivtun=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd=y
