Disable full 14.07 image build on BRCM47xx

--- a/aprs-box/14.07/files/brcm47xx/repo-base.conf
+++ b/aprs-box/14.07/files/brcm47xx/repo-base.conf
@@ -5,9 +5,9 @@
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 
-src/gz barrier_breaker_base http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/base
-src/gz barrier_breaker_packages http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/packages
-src/gz barrier_breaker_luci http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/luci
+src/gz barrier_breaker_base https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm47xx/legacy/packages/base
+src/gz barrier_breaker_packages https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm47xx/legacy/packages/packages
+src/gz barrier_breaker_luci https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm47xx/legacy/packages/luci
 #src/gz barrier_breaker_routing http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/routing
 #src/gz barrier_breaker_telephony http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/telephony
 #src/gz barrier_breaker_management http://downloads.openwrt.org/barrier_breaker/14.07/brcm47xx/legacy/packages/management
