--- a/aprs-box/Makefile
+++ b/aprs-box/Makefile
@@ -45,9 +45,10 @@ bb1:
 	@echo "= Building OpenWrt-14.07 APRS image for BRCM47XX devices ="
 	@echo "=========================================================="
 	make -C 14.07 extract_brcm47xx
-	make -C 14.07 brcm47xx NETWORK=1 NAS=1
+	#make -C 14.07 brcm47xx NETWORK=1 NAS=1
+	make -C 14.07 .network NAS=1
 	make -C 14.07 deploy_packages
-	make -C 14.07 deploy TYPE=full
+	#make -C 14.07 deploy TYPE=full
 	make -C 14.07 brcm47xx NETWORK=1
 	make -C 14.07 deploy TYPE=net
 	make -C 14.07 brcm47xx 
