Switch to ustc mirror

--- a/aprs-box/15.05.1/files/brcm47xx/repo-base.conf
+++ b/aprs-box/15.05.1/files/brcm47xx/repo-base.conf
@@ -5,6 +5,10 @@
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 
+src/gz chaos_calmer_base https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/base
+src/gz chaos_calmer_packages https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/packages
+src/gz chaos_calmer_luci https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/luci
+
 src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/base
 src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/packages
 src/gz chaos_calmer_luci http://downloads.openwrt.org/chaos_calmer/15.05.1/brcm47xx/legacy/packages/luci
