--- a/aprs-box/14.07/files/brcm63xx/repo-base.conf
+++ b/aprs-box/14.07/files/brcm63xx/repo-base.conf
@@ -5,10 +5,10 @@
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 
-src/gz barrier_breaker_base http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/base
-src/gz barrier_breaker_packages http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/packages
-src/gz barrier_breaker_luci http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/luci
-#src/gz barrier_breaker_luci http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/luci
-#src/gz barrier_breaker_routing http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/routing
-#src/gz barrier_breaker_telephony http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/telephony
-#src/gz barrier_breaker_management http://downloads.openwrt.org/barrier_breaker/14.07/brcm63xx/generic/packages/management
+src/gz barrier_breaker_base https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/base
+src/gz barrier_breaker_packages https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/packages
+src/gz barrier_breaker_luci https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/luci
+#src/gz barrier_breaker_luci https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/luci
+#src/gz barrier_breaker_routing https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/routing
+#src/gz barrier_breaker_telephony https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/telephony
+#src/gz barrier_breaker_management https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/brcm63xx/generic/packages/management
