--- a/aprs-box/14.07/files/rt305x/repo-base.conf
+++ b/aprs-box/14.07/files/rt305x/repo-base.conf
@@ -1,17 +1,17 @@
 ## Place your custom repositories here, they must match the architecture and version.
-# src/gz barrier_breaker http://downloads.openwrt.org/barrier_breaker/14.07/ramips/mt7620a/packages
+# src/gz barrier_breaker https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/mt7620a/packages
 # src custom file:///usr/src/openwrt/bin/ramips/packages
 
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 
-#src/gz mywrt_base https://hamclub.net/openwrt/build/15.05.1/ramips/rt305x/packages/base
-#src/gz mywrt_packages https://hamclub.net/openwrt/build/15.05.1/ramips/rt305x/packages/packages
-#src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/ramips/rt305x/packages/luci
+#src/gz mywrt_base https://hamclub.net/openwrt/build/14.07/ramips/rt305x/packages/base
+#src/gz mywrt_packages https://hamclub.net/openwrt/build/14.07/ramips/rt305x/packages/packages
+#src/gz mywrt_luci https://hamclub.net/openwrt/build/14.07/ramips/rt305x/packages/luci
 
-src/gz barrier_breaker_base http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/base
-src/gz barrier_breaker_packages http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/packages
-#src/gz barrier_breaker_luci http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/luci
-#src/gz barrier_breaker_routing http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/routing
-#src/gz barrier_breaker_telephony http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/telephony
-#src/gz barrier_breaker_management http://downloads.openwrt.org/barrier_breaker/15.05.1/ramips/rt305x/packages/management
+src/gz barrier_breaker_base https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/base
+src/gz barrier_breaker_packages https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/packages
+src/gz barrier_breaker_luci https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/luci
+#src/gz barrier_breaker_routing https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/routing
+#src/gz barrier_breaker_telephony https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/telephony
+#src/gz barrier_breaker_management https://openwrt.proxy.ustclug.org/barrier_breaker/14.07/ramips/rt305x/packages/management
