--- a/aprs-box/15.05.1/files/mt7620/repo-base.conf
+++ b/aprs-box/15.05.1/files/mt7620/repo-base.conf
@@ -8,8 +8,12 @@ src imagebuilder file:packages
 src/gz mywrt_base https://hamclub.net/openwrt/build/15.05.1/mtk/mt7620/packages/base
 src/gz mywrt_packages https://hamclub.net/openwrt/build/15.05.1/mtk/mt7620/packages/packages
 src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/mtk/mt7620/packages/luci
-src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/base
-src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/packages
+
+src/gz chaos_calmer_base https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/mt7620/packages/base
+src/gz chaos_calmer_packages https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/mt7620/packages/packages
+
+#src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/base
+#src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/packages
 #src/gz chaos_calmer_luci http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/luci
 #src/gz chaos_calmer_routing http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/routing
 #src/gz chaos_calmer_telephony http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/telephony
