--- a/aprs-box/15.05.1/files/rt305x/repo-base.conf
+++ b/aprs-box/15.05.1/files/rt305x/repo-base.conf
@@ -9,8 +9,12 @@ src imagebuilder file:packages
 #src/gz mywrt_packages https://hamclub.net/openwrt/build/15.05.1/ramips/rt305x/packages/packages
 #src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/ramips/rt305x/packages/luci
 
-src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/base
-src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/packages
+src/gz chaos_calmer_base https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/rt305x/packages/base
+src/gz chaos_calmer_packages https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/rt305x/packages/packages
+src/gz chaos_calmer_luci https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/rt305x/packages/luci
+
+#src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/base
+#src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/packages
 #src/gz chaos_calmer_luci http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/luci
 #src/gz chaos_calmer_routing http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/routing
 #src/gz chaos_calmer_telephony http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/rt305x/packages/telephony
